cmake_minimum_required (VERSION 2.8)
set( APPNAME ipc-stream )
if (ARM)
    SET(CMAKE_C_COMPILER   arm-linux-gnueabihf-gcc )
    SET(CMAKE_CXX_COMPILER arm-linux-gnueabihf-g++ )
endif()
project( ${APPNAME} )
set(CMAKE_BUILD_TYPE Debug)
add_definitions( "-Wall -g" )
message ( ${CMAKE_CURRENT_SOURCE_DIR} )
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/paho)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/rtmp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/rtmp_sdk)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/devsdk)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
AUX_SOURCE_DIRECTORY( ./src DIR_SRCS)
if (ARM)
    add_definitions( -D__ARM )
    AUX_SOURCE_DIRECTORY( ./src/arm DIR_SRCS)
endif()
if (ARM)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/arm)
else()
    add_definitions( -D__X86 )
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/x86/)
endif()
ADD_EXECUTABLE( ${APPNAME} ${DIR_SRCS} )
target_link_libraries( ${APPNAME} rtmp_sdk rtmp MQTTPacketClient paho-embed-mqtt3cc fdk-aac m pthread )
add_subdirectory( ./src/tests )
