cmake_minimum_required (VERSION 2.8)
set( APPNAME ipc-stream )
if (ARM)
    SET(CMAKE_C_COMPILER   arm-linux-gnueabihf-gcc )
    SET(CMAKE_CXX_COMPILER arm-linux-gnueabihf-g++ )
endif()
project( ${APPNAME} )
set(CMAKE_BUILD_TYPE Debug)
if( DEBUG )
    add_definitions("-funwind-tables -finstrument-functions -Wall -g" )
    add_definitions( -DDEBUG_TRACE_FUNCTION )
endif()
message ( ${CMAKE_CURRENT_SOURCE_DIR} )
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/rtmp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/rtmp_sdk)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/devsdk)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/wolfmqtt)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/mqtt)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/mqtt/cJSON)
AUX_SOURCE_DIRECTORY( ./src DIR_SRCS)
AUX_SOURCE_DIRECTORY( ./src/mqtt DIR_SRCS)
AUX_SOURCE_DIRECTORY( ./src/mqtt/wolfmqtt DIR_SRCS)
AUX_SOURCE_DIRECTORY( ./src/mqtt/cJSON DIR_SRCS)
if (ARM)
    add_custom_target( install-target ALL ./install.sh 
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    )
    add_definitions( -D__ARM )
    AUX_SOURCE_DIRECTORY( ./src/arm DIR_SRCS)
endif()
if (ARM)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/arm)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/arm/devsdk)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/arm/rtmp)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/arm/wolfmqtt)
else()
    add_definitions( -D__X86 )
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/x86/)
endif()
ADD_EXECUTABLE( ${APPNAME} ${DIR_SRCS} )
if ( ARM )
    target_link_libraries( ${APPNAME} rtmp_sdk rtmp devsdk tools fdk-aac wolfmqtt  m pthread )
else()
    target_link_libraries( ${APPNAME} rtmp_sdk rtmp MQTTPacketClient paho-embed-mqtt3cc fdk-aac m pthread )
endif()
add_subdirectory( ./src/tests )
