cmake_minimum_required (VERSION 2.8)
project( ipc-rtmp-stream )
if (ARM)
    SET(CMAKE_C_COMPILER   arm-linux-gnueabihf-gcc )
    SET(CMAKE_CXX_COMPILER arm-linux-gnueabihf-g++ )
    add_definitions( -D__ARM )
else()
    add_definitions( -D__X86 )
endif()
if( DEBUG )
    add_definitions("-funwind-tables -finstrument-functions -Wall -g" )
    add_definitions( -DDEBUG_TRACE_FUNCTION )
endif()
add_definitions( -g )
message ( ${CMAKE_CURRENT_SOURCE_DIR} )
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/rtmp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/rtmp_sdk)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/wolfmqtt)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/libmqtt)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/libmqtt/cJSON)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/librtmp_wrapper)
add_subdirectory( src )
