cmake_minimum_required (VERSION 2.8)
set( APPNAME ipc-rtmp-stream )
AUX_SOURCE_DIRECTORY( ./ DIR_SRCS)
if (ARM)
    add_custom_target( install-target ALL ../../install.sh 
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    )
    add_definitions( -D__ARM )
endif()
if (ARM)
    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../libs/arm)
    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../libs/arm/devsdk)
    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../libs/arm/rtmp)
    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../libs/arm/wolfmqtt)
    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../librtmp_wrapper)
else()
    add_definitions( -D__X86 )
    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../libs/x86/)
endif()
ADD_EXECUTABLE( ${APPNAME} ${DIR_SRCS} )
if ( ARM )
    target_link_libraries( ${APPNAME} rtmp_wrapper rtmp_sdk rtmp devsdk  tools fdk-aac mqtt wolfmqtt m pthread )
else()
    target_link_libraries( ${APPNAME} rtmp_sdk rtmp wolfmqtt fdk-aac m pthread )
endif()
