cmake_minimum_required (VERSION 2.8)
set( APPNAME ipc-rtmp-stream )
AUX_SOURCE_DIRECTORY( ./ DIR_SRCS)
AUX_SOURCE_DIRECTORY( ./hal DIR_SRCS)
AUX_SOURCE_DIRECTORY( ./devices DIR_SRCS)

include_directories( ./hal/ )

if (ARM)
    add_custom_target( install-target ALL ../../install.sh 
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    )
    add_definitions( -D__ARM )
    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../libs/arm-linux-gnueabihf/devsdk)
    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../libs/arm-linux-gnueabihf/rtmp)
    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../libs/arm-linux-gnueabihf/wolfmqtt)
else()
    add_definitions( -D__X86 )
    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../libs/x86/rtmp)
    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../libs/x86/wolfmqtt)
endif()
ADD_EXECUTABLE( ${APPNAME} ${DIR_SRCS} )
if ( ARM )
    target_link_libraries( ${APPNAME} rtmp_wrapper rtmp_sdk rtmp -Wl,--whole-archive ajdev  -Wl,--no-whole-archive devsdk tools fdk-aac mqtt wolfmqtt m pthread )
else()
    target_link_libraries( ${APPNAME} rtmp_wrapper rtmp_sdk rtmp mqtt wolfmqtt fdk-aac m pthread )
endif()
